# Personal-Finance-Hub

./: .dockerignore  .env.example  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  flyway.conf  package.json  pnpm-lock.yaml  quality_check.ps1  vcpkg.json
Docs/: 01_Technical_Architecture.md  02_Database_Design.md  03_Domain_Model_Design.md  04_Money_Currency_System_Design.md  05_Repository_and_Persistence_Design.md  06.5_Workflow_and_Lifecycle_Design.md  06_Service_and_Use_Case_Design.md  07.5_Reporting_and_Analytics_Design.md  07_Exchange_Rate_System_Design.md  08_REST_API_Design.md  09.5_Scheduler_Design.md  09_Sync_Framework_Design.md  10_Frontend_Design.md  11_Event_Design.md  12_Error_Handling_Design.md  13_Testing_Strategy.md  QUICK_REFERENCE.md  README.md  directory.md
Docs/Architecture/: 01_Technical_Architecture.md  02_Database_Design.md  03_Domain_Model_Design.md  04_Money_Currency_System_Design.md  05_Repository_and_Persistence_Design.md  06_Service_and_Use_Case_Design.md  07_Workflow_and_Lifecycle_Design.md  08_Exchange_Rate_System_Design.md  09_Reporting_and_Analytics_Design.md  10_REST_API_Design.md  10_REST_API_OpenAPI.json  11_Sync_Framework_Design.md  12_Scheduler_Design.md  13_Frontend_Design.md  14_Event_Design.md  15_Error_Handling_Design.md  16_Testing_Strategy.md
Docs/Archive/: Config_Env_Overlay_Design.md  Documents_Optimization_Summary.md  Documents_Optimize_1.md  Documents_Optimize_2.md  Documents_Optimize_3.md  Phase_1_Development_Record.md  Phase_1_S01-S03_Delivery_Summary.md  Phase_1_S01-S04_Delivery_Summary.md  Phase_1_S04_Delivery_Summary.md  Phase_1_S05-S08_Delivery_Summary.md  Phase_1_S05_Delivery_Summary.md  Phase_1_S06_Delivery_Summary.md  Phase_1_S07_Delivery_Summary.md  Phase_1_S08_Delivery_Summary.md  Phase_1_S09-S12_Delivery_Summary.md  Phase_1_S09_Delivery_Summary.md  Phase_1_S10_PostgreSQL_Persistence_Validation_Report.md  Phase_1_S12_Delivery_Summary.md  Phase_2_Development_Record.md  Phase_2_S01-S04_Delivery_Summary.md  Phase_2_S05-S08_Delivery_Summary.md  Phase_2_S09-S12_Delivery_Summary.md
Docs/Completed_Modifications/: Documents_Optimize_1.md  Documents_Optimize_2.md  Documents_Optimize_3.md
Docs/Develop_Plan/: Overall_Development_Plan.md  Phase_1_Development_Plan.md  Phase_3_Development_Plan.md
Docs/Development/: Config_Env_Overlay_Design.md  PHASE_1_FOUNDATION_COMPLETE.md  Phase_1_Progress_Report.md  Phase_1_S01-S03_Delivery_Summary.md  Phase_1_S04-S04_Delivery_Summary.md  Phase_1_S04_Completion_Report.md  Phase_1_S04_Delivery_Summary.md  Phase_1_S05-S05_Delivery_Summary.md  Phase_1_S05_Delivery_Summary.md  Phase_1_S05_Progress_Report.md  Phase_1_S06_Delivery_Summary.md  Phase_1_S07_Delivery_Summary.md  Phase_1_S08_Delivery_Summary.md  Phase_1_S09_Delivery_Summary.md  Phase_1_S10_Delivery_Summary.md  Phase_1_S10_PostgreSQL_Persistence_Validation_Report.md  Phase_1_S11_Delivery_Summary.md  Phase_1_S12_Delivery_Summary.md  Phase_2_S01-S02_Delivery_Summary.md  Phase_2_S03-S04_Delivery_Summary.md  Phase_2_S05_Delivery_Summary.md  Phase_2_S06_Delivery_Summary.md  Phase_2_S07_Delivery_Summary.md  Phase_2_S08_Delivery_Summary.md  Phase_2_S09_Delivery_Summary.md  Phase_2_S10_Delivery_Summary.md  Phase_2_S11_Delivery_Summary.md  Phase_2_S12_Delivery_Summary.md  Post_Phase_2_Audit_Remediation_Plan.md  QUICK_REFERENCE.md  Tasks.md  tasks.md
Docs/Development_Plans/: Overall_Development_Plan.md  Phase_1_Development_Plan.md  Phase_2_Development_Plan.md
Docs/Documents_Standard/: Documents_Format_Standard.md  directory.md
Docs/Guides/: Database_Migration_Guide.md  Dependency_Installation_Guide.md  Directory_Guidance.md  Linux_Development_Workflow.md  Local_Test_Environment.md  Quick_Reference.md  Ubuntu_Server_Deployment_Guide.md
Docs/Standards/: DEPENDENCY_INSTALLATION.md  Documents_Format_Standard.md  directory.md
cmake/: Dependencies.cmake
config/: README.md  config.example.json
docker/frontend/: Dockerfile  nginx.conf
docker/postgres/: init-roles.sql
frontend/: .prettierignore  bundle-budgets.json  eslint.config.js  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/e2e/: account-management.spec.ts  application-shell.spec.ts  long-session-memory.spec.ts  maintenance-operations.spec.ts  report-workflow.spec.ts  settings-management.spec.ts  transaction-workflow.spec.ts  transfer-workflow.spec.ts
frontend/src/: App.vue  main.ts
frontend/tools/: validate-bundle.mjs  validate-dependencies.mjs  validate-i18n.mjs  validate-release-security.mjs
migrations/: V10__operations_and_roles.sql  V11__complete_user_preferences.sql  V12__seed_en_us_category_templates.sql  V1__initial_schema.sql  V2__seed_initial_currencies.sql  V3__seed_system_category_templates.sql  V4__authentication_session_security.sql  V5__align_transfer_rate_precision.sql  V6__outbox_scheduler_foundation.sql  V7__request_idempotency.sql  V8__transaction_corrections.sql  V9__transfer_corrections.sql
src/application/: auth_service.cpp  cleanup_expired_idempotency_use_case.cpp  cleanup_published_outbox_use_case.cpp  correct_transaction_use_case.cpp  correct_transfer_use_case.cpp  delete_transfer_use_case.cpp  finance_application_service.cpp  local_event_bus.cpp  maintenance_use_cases.cpp  operations_application_service.cpp  outbox_publisher.cpp  (+5 more)
tests/: TEST_NAMING_CONVENTION.md
tests/api/: CMakeLists.txt  api_auth_test.cpp  api_resource_test.cpp  http_boundary_test.cpp
tests/integration/: CMakeLists.txt  postgresql_integration_test.cpp  repository_integration_test.cpp
tests/unit/: CMakeLists.txt  auth_service_test.cpp  balance_calculation_service_test.cpp  category_test.cpp  config_test.cpp  currency_conversion_service_test.cpp  currency_test.cpp  decimal_test.cpp  error_test.cpp  exchange_rate_provider_test.cpp  exchange_rate_test.cpp  logger_test.cpp  money_test.cpp  outbox_test.cpp  scheduler_test.cpp  smoke_test.cpp  transfer_domain_service_test.cpp  typed_id_test.cpp  use_case_test.cpp
tools/: phase2_performance.py  phase2_pressure.py  run_sanitizers.sh
(+349 files in other folders)
